[package]
name = "sys_stat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.23.5"
clap = { version = "3.1.5", features = ["derive"] }
human_bytes = { version = "0.3", features = ["bibytes"] }
colored = "2.0.0"