[package]
name = "sys_stat"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.26.2"
clap = { version = "3.2.22", features = ["derive"] }
human_bytes = { version = "0.3", features = ["bibytes"] }
colored = "2.0.0"